--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Time to focus!</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/png" href="https://img.icons8.com/?size=96&id=80746&format=png">
 </head>
 <body>
 <div class="first-container">
@@ -32,11 +33,11 @@
         <p class="short-navi">Short Break</p>
         <p class="long-navi">Long Break</p>
     </div>
-    <div class="counter">
-        <p class="big-counter">25:00</p>
+    <div class="big-counter">
+        <p class="counter" id="counter">25:00</p>
     </div>
     <div class="start-button">
-        <p class="start">START</p>
+        <p class="start" id="button">START</p>
     </div>
 </div>
 
