black theme after start reset button debugging second timer problem

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/png" href="https://img.icons8.com/?size=96&id=80746&format=png">
 </head>
-<body>
+<body class="basic">
 <div class="first-container">
     <div class="first-line">
         <div class="first-line-name">
@@ -26,19 +26,24 @@
     </div>
 </div>
 </div>
-<div class="red-line"></div>
-<div class="main-container">
+<div class="red-line basic" id="red-line"></div>
+<div class="main-container basic" id="main-container">
     <div class="navi">
-        <p class="pomodoro-navi">Pomodoro</p>
+        <p class="pomodoro-navi basic">Pomodoro</p>
         <p class="short-navi">Short Break</p>
         <p class="long-navi">Long Break</p>
     </div>
     <div class="big-counter">
         <p class="counter" id="counter">25:00</p>
     </div>
-    <div class="start-button">
-        <p class="start" id="button">START</p>
+    <div class="buttons">
+    <div class="button-start basic">
+        <p class="start" id="button-start">START</p>
     </div>
+    <div class="button-reset basic">
+        <p class="reset" id="button-reset">RESET</p>
+    </div>
+        </div>
 </div>
 
 
