long and short breaks

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 <div class="main-container basic" id="main-container">
     <div class="navi">
         <p class="pomodoro-navi basic">Pomodoro</p>
-        <p class="short-navi">Short Break</p>
-        <p class="long-navi">Long Break</p>
+        <p class="short-navi" id="shortBreak">Short Break</p>
+        <p class="long-navi" id="longBreak">Long Break</p>
     </div>
     <div class="big-counter">
         <p class="counter" id="counter">25:00</p>
