added finish sound

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </div>
         </div>
 </div>
-
+<audio id="soundPlayer" src="sound/bell.mp3" preload="auto"></audio>
 
 <script src="script.js"></script>
 </body>
